<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Sketcher</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="sd_card_is_not_available">SD card is not available</string>
    <string name="saving_to_sd_please_wait">Saving to SD, please wait</string>
    <string name="send_image_to">Send image to</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="clear">Clear</string>
    <string name="newitem">New</string>
    <string name="draw">Draw</string>
    <string name="erase">Erase</string>
    <string name="show_toolbar">Show toolbar</string>
    <string name="hide_toolbar">Hide toolbar</string>
    <string name="palette">Color &amp; width</string>
    <string name="delete">Delete</string>
    <string name="hand">Move</string>
    <string name="preferences">Settings</string>
    <string name="toolbar_pref_title">Toolbar visibility</string>
    <string name="toolbar_pref_summary">Should toolbar with common actions be on the screen</string>
    <string name="thickness">Curve thickness</string>
    <string name="color">Curve color</string>
    <string name="soon">Coming soon!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="saving_preview">Saving preview...</string>
    <string name="cant_save_preview">Can not save preview, maybe external
      storage is not available</string>
    <dimen name="eraser_radius">30px</dimen>
</resources>
